# scalc

./: CMakeLists.txt  README.md
app/: scalc.cpp  scalc.hpp
docs/puml/: sequence.puml
include/expression/: expression.hpp  simpleevaluator.hpp
include/filemanager/: filemanager.hpp
include/util/: util.hpp
src/: expression.cpp  filemanager.cpp  simpleevaluator.cpp  util.cpp
tests/: basictest.cpp
tests/files/input/examples/: ex1.txt  ex2.txt
tests/files/input/invalid_data/: ex1.txt  ex2.txt  ex3.txt  ex4.txt  ex5.txt
tests/files/input/valid_data/: ex1.txt  ex2.txt  ex3.txt  ex4.txt
